<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@android:color/holo_orange_dark"
    android:layout_height="match_parent"
    tools:context=".onboarding.OnBoardingOneFragment">

    <!-- TODO: Update blank fragment layout -->

    <TextView
        android:id="@+id/textViewBack"
        android:layout_width="116dp"
        android:layout_height="33dp"
        android:layout_marginStart="400dp"
        android:layout_marginLeft="400dp"
        android:layout_marginTop="324dp"
        android:layout_marginEnd="390dp"
        android:layout_marginRight="390dp"
        android:layout_marginBottom="16dp"
        android:text="@string/back"
        android:textColor="@android:color/white"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.737"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.949" />

    <TextView
        android:id="@+id/textViewSecond"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_images_to_your_todos"
        android:textStyle="bold"
        android:textColor="@android:color/white"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewDone"
        android:layout_width="103dp"
        android:layout_height="35dp"
        android:layout_marginStart="324dp"
        android:layout_marginLeft="324dp"
        android:layout_marginTop="324dp"
        android:layout_marginBottom="32dp"
        android:text="@string/done"
        android:textColor="@android:color/white"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="0.542" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="164dp"
        android:layout_height="145dp"
        android:layout_marginBottom="32dp"
        android:src="@drawable/ic_checklist"
        app:layout_constraintBottom_toTopOf="@+id/textViewSecond"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:contentDescription="@string/todo1" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textStyle="bold"
        android:text="@string/either_by_camera_or_by_gallery"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewSecond" />


</androidx.constraintlayout.widget.ConstraintLayout>